fixed vertical spacing on have a project in mind

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -296,8 +296,8 @@
     text-align: center;
     padding-left: 25px;
     padding-right: 25px;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 
     @include media($break-small)  {
       font-size: 14px;
